--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
+    "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22"
   }
 }
